array.island.Island.scala.error
Erreur de compilation :
Island:6: error: not found: value len
  for(i<-1 to len(num)){
              ^Island:7: error: not found: type i
    if(num[i]>max){
           ^Island:7: error: value num of type Array[Int] does not take type parameters.
    if(num[i]>max){
          ^Island:8: error: not found: type i
      max=num[i]
              ^Island:8: error: value num of type Array[Int] does not take type parameters.
      max=num[i]
             ^Island:13: error: not found: value len
    for(i<-1 to len(num)){
                ^Island:18: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
    if(b%2=0){
        ^Island:11: error: type mismatch;
 found   : Unit
 required: Int
  while(a!=max){
  ^